Fixed button group white space on active/focus-visible state

--- a/scss/components/_button-group.scss
+++ b/scss/components/_button-group.scss
@@ -3,7 +3,9 @@
 	margin: 0.25em 0.125em;
 
 	.button {
-		margin: 0;
+		// sometimes on active/focus-visible a white space will be create,
+		// to fix this -1px margin is practical.
+		margin: -1px;
 		border-radius: 0;
 	}
 
